# NumHypSys

./: CMakeLists.txt  README.md
add_to_mfem_lib/: fe.cpp  fe.hpp
include/: includes.hpp
include/core/: base_observer.hpp  base_pobserver.hpp  config.hpp  error.hpp  perror.hpp  utilities.hpp
include/incompNS/: assembly.hpp  coefficients.hpp  discretisation.hpp  observer.hpp  operators.hpp  passembly.hpp  pdiscretisation.hpp  pobserver.hpp  poperators.hpp  psolver.hpp  psolver_factory.hpp  putilities.hpp  solver.hpp  solver_factory.hpp  test_cases.hpp  test_cases_factory.hpp  utilities.hpp
include/mymfem/: assembly.hpp  cell_avgs.hpp  mybilinearform.hpp  mybilininteg.hpp  mymixedbilinearform.hpp  myoperators.hpp  mypbilinearform.hpp  myplinearform.hpp  mypmixedbilinearform.hpp  mypoperators.hpp  pcell_avgs.hpp  putilities.hpp  utilities.hpp
include/stokes/: assembly.hpp  coefficients.hpp  discretisation.hpp  observer.hpp  solver.hpp  test_cases.hpp
include/uq/sampler/: generator.hpp  sampler.hpp  sobol.hpp
include/uq/scheduler/: communicator.hpp  scheduler.hpp  self_scheduler.hpp
include/uq/stats/: cells_hash_table.hpp  pcells_hash_table.hpp  stats.hpp  structure_base.hpp
meshes/channel_L1pt5/: quad_mesh_l0.mesh  tri_mesh_l0.mesh
meshes/channel_L1pt5/refined/: tri_mesh_l0.msh
meshes/kovasznay_flow/: quad_mesh_l0.mesh
meshes/periodic_square2Pi/: quad_mesh_l0.mesh  tri_mesh_l0.mesh
meshes/periodic_unit_square/: quad_mesh_l0.mesh  quad_mesh_l0_bak.mesh  tri_mesh_l0.mesh  tri_mesh_l0_bak.mesh
meshes/square2Pi/: quad_mesh_l0.mesh  quad_mesh_l0.msh  tri_mesh_l0.mesh  tri_mesh_l0.msh
scripts/: common.py  plot_convg_incompNS.py  plot_convg_stokes.py  plot_incompNS_ldc.py  plot_ordered_velocities.py
scripts/uniform_grids/: compute_ldc_structure.py  compute_svs_structure.py  structure_mean_ldc.py  structure_mean_svs.py
scripts/uq_cf/: common.py  compute_wasserstein.py  plot_convg.py  plot_structure.py  plot_velocityPdfs.py  plot_wasserstein.py
scripts/uq_cf/vis/lx0_Re1600/: run_vis.sh  vis_uq_cf_lx0_s120.glvs  vis_uq_cf_lx0_s240.glvs  vis_uq_cf_lx0_s30.glvs  vis_uq_cf_lx0_s480.glvs  vis_uq_cf_lx0_s60.glvs
scripts/uq_cf/vis/lx0_Re3200/: run_vis.sh  vis_uq_cf_lx0_s120.glvs  vis_uq_cf_lx0_s240.glvs  vis_uq_cf_lx0_s30.glvs  vis_uq_cf_lx0_s480.glvs  vis_uq_cf_lx0_s60.glvs
scripts/uq_cf/vis/lx1_Re1600/: run_vis.sh  vis_uq_cf_lx1_s120.glvs  vis_uq_cf_lx1_s120_init.glvs  vis_uq_cf_lx1_s240.glvs  vis_uq_cf_lx1_s30.glvs  vis_uq_cf_lx1_s480.glvs  vis_uq_cf_lx1_s60.glvs
scripts/uq_cf/vis/lx1_Re3200/: run_vis.sh  vis_uq_cf_lx1_s120.glvs  vis_uq_cf_lx1_s240.glvs  vis_uq_cf_lx1_s30.glvs  vis_uq_cf_lx1_s480.glvs  vis_uq_cf_lx1_s60.glvs
scripts/uq_cf/vis/lx2_Re1600/: vis_uq_cf_lx2_s120.glvs  vis_uq_cf_lx2_s240.glvs  vis_uq_cf_lx2_s30.glvs  vis_uq_cf_lx2_s480.glvs  vis_uq_cf_lx2_s60.glvs
scripts/uq_cf/vis/lx2_Re3200/: run_vis.sh  vis_uq_cf_lx2_s120.glvs  vis_uq_cf_lx2_s240.glvs  vis_uq_cf_lx2_s30.glvs  vis_uq_cf_lx2_s480.glvs  vis_uq_cf_lx2_s60.glvs
scripts/uq_cf/vis/lx3_Re1600/: vis_uq_cf_lx3_s120.glvs  vis_uq_cf_lx3_s240.glvs  vis_uq_cf_lx3_s30.glvs  vis_uq_cf_lx3_s480.glvs  vis_uq_cf_lx3_s60.glvs
scripts/uq_cf/vis/lx3_Re3200/: run_vis.sh  vis_uq_cf_lx3_s120.glvs  vis_uq_cf_lx3_s240.glvs  vis_uq_cf_lx3_s30.glvs  vis_uq_cf_lx3_s480.glvs  vis_uq_cf_lx3_s60.glvs
scripts/uq_cf_test/: compute_wasserstein.py  wasserstein.py
scripts/uq_ldc/: common.py  compute_wasserstein.py  plot_convg.py  plot_structure.py  plot_velocityPdfs.py  plot_wasserstein.py
scripts/uq_ldc/vis/: run_vis.sh  vis_uq_ldc_lx5.glvs  vis_uq_ldc_lx6.glvs  vis_uq_ldc_lx7.glvs  vis_uq_ldc_lx8.glvs  vis_uq_ldc_lx8_init.glvs  vis_uq_ldc_lx9.glvs
scripts/uq_svs/: compute_wasserstein.py  plot_convg.py  plot_structure.py  plot_velocityPdfs.py  plot_wasserstein.py  wasserstein.py
scripts/uq_svs/vis/: run_vis.sh  vis_uq_svs_lx3.glvs  vis_uq_svs_lx4.glvs  vis_uq_svs_lx5.glvs  vis_uq_svs_lx6.glvs  vis_uq_svs_lx6_init.glvs  vis_uq_svs_lx7.glvs
scripts/vis/cf_Re500/: run_vis_cf.sh  vis_cf_vx_lx5.glvs  vis_cf_vy_lx5.glvs
scripts/vis/dsl/: run_vis.sh  vis_dsl.glvs  vis_dsl_test.glvs  vis_dsl_velocity.glvs
src/: CMakeLists.txt  incompNS.cpp  pincompNS.cpp  post_process.cpp  ppost_process.cpp  stokes.cpp  uq_incompNS.cpp  uq_pincompNS.cpp
src/core/: CMakeLists.txt  base_observer.cpp  base_pobserver.cpp  config.cpp  error.cpp  perror.cpp  utilities.cpp
src/incompNS/: CMakeLists.txt  assembly.cpp  backwardEuler.cpp  bdf1Rk2.cpp  cell_avgs.cpp  coefficients.cpp  discretisation.cpp  imexBdf2.cpp  imexEuler.cpp  observer.cpp  operators.cpp  passembly.cpp  pbackwardEuler.cpp  pbdf1Rk2.cpp  pdiscretisation.cpp  pimexBdf2.cpp  pimexEuler.cpp  pobserver.cpp  poperators.cpp  ppreconditioners.cpp  preconditioners.cpp  psolver.cpp  psolver_factory.cpp  putilities.cpp  solver.cpp  solver_factory.cpp  test_cases.cpp  test_cases_factory.cpp  utilities.cpp
src/mymfem/: CMakeLists.txt  assembly.cpp  cell_avgs.cpp  mybilinearform.cpp  mymixedbilinearform.cpp  myoperators.cpp  mypbilinearform.cpp  myplinearform.cpp  mypmixedbilinearform.cpp  mypoperators.cpp  pcell_avgs.cpp  putilities.cpp  utilities.cpp
src/stokes/: CMakeLists.txt  assembly.cpp  coefficients.cpp  discretisation.cpp  observer.cpp  solver.cpp  test_cases.cpp
src/uq/: CMakeLists.txt
src/uq/sampler/: CMakeLists.txt  generator.cpp  sampler.cpp  sobol.cpp
src/uq/scheduler/: CMakeLists.txt  communicator.cpp  scheduler.cpp
src/uq/stats/: CMakeLists.txt  cells_hash_table.cpp  pcells_hash_table.cpp  stats.cpp  structure_base.cpp
tests/: CMakeLists.txt  punit_tests.cpp  test_RTspace.cpp  test_cfl.cpp  test_divergence.cpp  test_error.cpp  test_hashTable.cpp  test_pardiso.cpp  test_pcfl.cpp  test_pdivergence.cpp  test_phashTable.cpp  test_stokes.cpp  test_uq_sampler.cpp  test_uq_scheduler.cpp  test_uq_stats.cpp  test_utilities.cpp
